# umap

./: .gitignore  CLAUDE.md  Cargo.toml  DIAGNOSIS.md  IMPROVEMENTS.md  README.md  diverse_test_data.txt  test_data.txt
crates/umap-cli/: Cargo.toml
crates/umap-cli/src/: main.rs
crates/umap-core/: Cargo.toml
crates/umap-core/src/: chunk.rs  db.rs  embedding.rs  lib.rs  reduction.rs  search.rs  types.rs
crates/umap-web/: Cargo.toml  index.html
crates/umap-web/src/: lib.rs
demo-app/: Cargo.toml  Trunk.toml  index.html
demo-app/assets/demo-data/: romance-2d-pca.json  romance-3d-pca.json
demo-app/src/: lib.rs
docs/: PRD.md  design.md  index.html  research.md  umap-demo-6b1767606face6b7.js  umap-demo-6b1767606face6b7_bg.wasm  umap-demo-7a2c47279d09120c_bg.wasm  umap-demo-7b87ef7715013dd6.js  umap-demo-7b87ef7715013dd6_bg.wasm  umap-demo-96dcf3ba225e536b.js  umap-demo-96dcf3ba225e536b_bg.wasm  umap-demo-98a131bebacf6c25_bg.wasm  umap-demo-ad21b9bfe99ac56b_bg.wasm
docs/.stage/assets/demo-data/: romance-3d-umap.json
docs/assets/demo-data/: romance-2d-umap.json
documentation/: architecture.md  demo-explanation.md  plan.md  process.md  test-checklist.md
scripts/: build-all.sh  build.sh  create-demo-data.sh  ingest-all.sh  serve-app.sh  serve-demo.sh  serve.sh  setup-demo.sh  test-demo.sh
ui-tests/: package.json  playwright.config.ts
ui-tests/samples/: sample.txt
ui-tests/tests/: ui.spec.ts
wiki/: Architecture.md  Data-Flow.md  Deployment.md  Home.md  README.md  _Sidebar.md  umap-cli.md  umap-core.md  umap-web.md
