[workspace]
resolver = "2"
members = [
    "crates/umap-core",
    "crates/umap-cli",
    "crates/umap-web",
]
exclude = [
    "demo-app",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
repository = "https://github.com/your/repo"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
time = { version = "0.3", features = ["serde", "formatting"] }
rand = "0.8"
regex = "1"
itertools = "0.13"
ndarray = "0.15"
linfa = "0.7"
linfa-reduction = "0.7"
axum = { version = "0.7", features = ["json"] }
hyper = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
urlencoding = "2"
