[package]
name = "umap-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Optional: add a future `umap` feature when a Rust UMAP crate is chosen
# umap = ["dep:umap-crate-name"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
rusqlite = { workspace = true }
time = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
linfa = { workspace = true }
linfa-reduction = { workspace = true }
uuid = { workspace = true }

