[package]
name = "umap-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = { version = "0.6", features = ["http"] }
plotly = "0.13"
yew-plotly = "0.3"
wasm-logger = "0.2"
log = "0.4"
urlencoding = "2"
gloo-file = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "FileList", "Document", "Window"] }
